[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialogue_tree_creator/Assets/MagnifyingGlass.png" type="Texture" id=1]
[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/NodeWidgets/CharacterSearchMenu.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/NodeWidgets/PopupMenu.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/NodeWidgets/CharLabel.gd" type="Script" id=4]

[node name="CharacterSearchBar" type="HSplitContainer"]
margin_right = 175.0
margin_bottom = 26.0
dragger_visibility = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CharLabel" type="TextEdit" parent="."]
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 26 )
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="PopupButton" type="TextureButton" parent="."]
margin_left = 150.0
margin_right = 175.0
margin_bottom = 26.0
rect_min_size = Vector2( 25, 26 )
texture_normal = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="PopupButton"]
margin_right = 200.0
margin_bottom = 52.0
rect_min_size = Vector2( 200, 30 )
allow_search = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recents" type="PopupMenu" parent="PopupButton/PopupMenu"]
margin_right = 20.0
margin_bottom = 20.0

[connection signal="focus_entered" from="CharLabel" to="CharLabel" method="_on_CharLabel_focus_entered"]
[connection signal="focus_exited" from="CharLabel" to="CharLabel" method="_on_CharLabel_focus_exited"]
[connection signal="pressed" from="PopupButton" to="." method="_on_PopupButton_pressed"]
